# localchat

./: .gitignore  README.md  run.sh
backend/: pyproject.toml
backend/localchat/: error_handlers.py  exceptions.py  logging_config.py  main.py  models.py  ollama.py  routes.py  services.py  streaming.py  utils.py
backend/localchat/services/: __init__.py  chat_service.py  message_service.py  model_service.py  profile_service.py  provider_service.py  streaming_service.py
backend/localchat/services/adapters/: adapter_factory.py  anthropic_adapter.py  base_adapter.py  custom_adapter.py  ollama_adapter.py  openai_adapter.py
backend/localchat/services/interactions/: base_strategy.py  interaction_service.py  non_streaming_strategy.py  streaming_strategy.py
backend/tests/: test_interaction_service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  ChatHistory.tsx  ChatList.tsx  ErrorDisplay.tsx  MessageInput.tsx  ProfileManager.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts  providers.ts
