[tool.poetry]
name = "localchat"
version = "0.1.0"
description = "A ChatGPT-like interface for interacting with AI models hosted at user-configured endpoints"
authors = ["LocalChat Team <info@localchat.example>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.23"
httpx = "^0.25.0"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
